Little data changes
Adjust for web publishing

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,17 +6,16 @@
 </head>
 <body>
     <h1>Contact Me:</h1>
-    <p><strong>My Addres:</strong> I live in Mérida</p>
-    <p><strong>My Phone:</strong> 999999999</p>
-    <p><strong>Mi email:</strong> <a href="mailto:jpmriera@prodigy.net.mx">juanitosmail@server.com</a></p>
+    <p><strong>My Addres:</strong> I live in Mérida, México</p>
+    <p><strong>Mi email:</strong> <a href="mailto:ixkuklin2@hotmail.com">ixkuklin2@hotmail.com</a></p>
     <hr>
-    <form class="" action="mailto:jpmriera@prodigy.net.mx" method="post" enctype="text/plain">
+    <form class="" action="mailto:mailto:ixkuklin2@hotmail.com" method="post" enctype="text/plain">
         <label>Your name:</label>
         <input type="text" name="yourName" value=""><br>
         <label>Your mail:</label>
         <input type="email" name="yourEmail" value=""><br>
         <textarea name="comentarios" cols="30" rows="10"></textarea><br>
-        <label>Allow our privacy rules</label>
+        <label>Allow me to contact you</label>
         <input type="checkbox" name="acceptPolicy">
         <br>
         <input type="submit" name="">
